Fix: Removes border from maximized windows
Removes the border from maximized windows to prevent them from appearing out of bounds. The `box-shadow` is implicitly removed by the `:not(.maximized)` selector on the `.os-window` class.

--- a/public/os-gui/windows-98.css
+++ b/public/os-gui/windows-98.css
@@ -402,6 +402,10 @@ body > .window-titlebar {
   /*border: 1px solid var(--WindowFrame);*/
   /* TODO: use window-specific theme colors; also different types of windows */
 }
+.os-window.maximized {
+  border: none;
+}
+
 .os-window:not(.maximized) {
   border-style: solid;
   border-width: 1px;
